--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -4,6 +4,7 @@
 /adobe_photoshop_sdk_2023_win_v1/pluginsdk/documentation/
 /adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/*
 !/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/common/
+!/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/resources/
 !/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/
 /adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/*
 !/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/listener
