--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -8,3 +8,4 @@
 !/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/
 /adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/*
 !/adobe_photoshop_sdk_2023_win_v1/pluginsdk/samplecode/automation/listener
+/test_opencv/
